src/App.css
/* #1f1ffc 
    #f55742
*/
/* Reset box model */
*,
*::before,
*::after {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

/* Remove list styles */
ul,
ol {
  list-style: none;
}

/* Remove default margin and padding for some elements */
body,
h1,
h2,
h3,
h4,
h5,
h6,
p,
blockquote,
figure,
dl,
dd {
  margin: 0;
  padding: 0;
}

/* Set default font size and family */
body {
  font-size: 16px;
  font-family: "Inter", sans-serif;
  height: 100%;
}

/* Remove hyperlink styles */
a {
  text-decoration: none;
  color: inherit;
}

img {
  width: 100%;
}

/* MAIN */

main {
  display: flex;
  justify-content: center;
}

section {
  width: 100%;
}


/* Button Global Style */

.meal-button,
button {
  background-color: #f55742;
  color: white;
  border: none;
  padding: 7px 12px;
  font-size: 1rem;
  font-family: "inter", sans-serif;
  font-weight: 600;
  border-radius: 10px;
}

button:hover {
  background-color: #ff6b57;
}

button:active {
  border: 1px solid white;
}

.burger-menu {
  display: none;
  justify-self: center;
  align-self: center;
  padding-bottom: 15px;
}

.burger-toggle {
  display: none;
}

.left span,
.right span,
.shopping-cart {
  cursor: pointer;
}

.nav{
  display: flex;
}

/* BURGER MENU */

.burger-menu {
  width: 30px;
  height: 30px;
  padding: 0;
  display: none;
  align-items: center;
  justify-content: center;
}

.burger-toggle {
  display: none;
}

.burger-icon {
  width: 30px;
  height: 20px;
  display: inline-block;
  cursor: pointer;
  position: relative;
}

.burger-icon span {
  width: 25px;
  height: 2px;
  background: #333;
  display: block;
  position: absolute;
  transition: transform 0.3s ease-in-out;
}


.burger-icon span:first-child {
  top: 0;
}

.burger-icon span:nth-child(2) {
  top: 10px;
}

.burger-icon span:last-child {
  top: 20px;
}

.burger-nav {
  position: fixed;
  top: 85px;
  right: 0;
  bottom: 0;
  left: 0;
  z-index: 1;
  background-color: #fff;
  
}

.burger-nav ul {
  width: 100%;
  position: absolute;
  top: 50%;
  margin: 0;
  padding: 0;
  list-style: none;
  transform: translateY(-50%);
  text-align: center;
}

.burger-nav li {
  margin: 0;
  display: inline-block;
}

.burger-nav a {
  display: block;
  font-size: 24px;
  margin: 50px 20px;
  text-decoration: none;
  transition: background 0.3s ease-in-out;
}

.burger-nav a:hover {
  color: #f55742;
  transform: scale(1);
}

/*---Burger Animation---*/

.burger-toggle:checked~.burger-icon span:first-child {
  transform: rotate(45deg) translate(5px, 13px);
}

.burger-toggle:checked~.burger-icon span:nth-child(2) {
  opacity: 0;
}

.burger-toggle:checked~.burger-icon span:last-child {
  transform: rotate(-45deg) translate(1px, -9px);
}

@media (max-width: 531px) {
  .nav-menu {
    display: none;
    height: 100vh;
    border: 1px solid black;
  }

  .burger-menu {
    display: flex;
  }
}


/*---Header Component---*/

header {
  width: 100vw;
  padding: 24px;
  display: flex;
  align-items: center;
  justify-content: space-between;
}

nav {
  display: flex;
  gap: 20px;
}

.main-logo {
  font-size: 1.5rem;
  background-color: #f55742;
  color: white;
  padding: 5px 15px;
  border-radius: 40px;
  box-shadow: -5px 8px 2px 1px rgba(31, 31, 252, 0.219);
  font-family: "Fugaz One", cursive;
}

/*---Home Component---*/

.hero {
  width: 100%;
  display: flex;
  flex-direction: column;
  gap: 60px;
  justify-content: center;
  align-items: center;
  margin-top: 20px;
  height: calc(100vh - 114px);
}

.hero>p {
  width: 70%;
  line-height: 1.7;
  font-size: 1rem;
  font-weight: 500;
}

/*  ---Fridge Page--- */

.fridge {
  width: 100%;
  height: calc(100vh - 94px);
  /* Subtract the header height */
  min-height: 600px;
  display: flex;
  justify-content: space-between;
  flex-direction: column;
  position: relative;
}

/* Fridge list/items */

.submit-wrapper {
  width: 90%;
  max-width: 500px;
  height: calc(96vh - 200px);
  min-height: 500px;
  margin: auto;
  position: relative;
  display: flex;
  justify-content: center;
}

.form-wrap{
  height: calc(100vh - 100px);
  width: 100%;
  position: absolute;
}

.fridge-card {
  width: 100%;
  max-width: 500px;
  height: calc(96vh - 200px);
  min-height: 500px;
  position: relative;
  overflow-y: auto;
  overflow-x: hidden;
  border: 1px solid rgb(187, 187, 187);
  box-shadow: -5px 8px 2px 1px rgba(31, 31, 252, 0.219);
  border-radius: 10px;
  align-items: center;
}

.fridge-card__title {
  padding: 15px;
  position: sticky;
  top: 0;
  text-align: center;
}

.fridge-list {
  width: 100%;
  display: flex;
  flex-direction: column;
  align-items: center;
  margin-bottom: 100px;
}

.fridge__items {
  width: 90%;
  max-width: 551px;
  height: 50px;
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 0px 15px;
}

/* Fridge form, buttons & input */

.fridge__form {
  width: 100%;
  display: flex;
  justify-content: center;
    /* background-color: #ceafab; */
  position: absolute;
  bottom: 0;
}

.fridge__controls {
  width: 100%;
  height: 40px;
  display: flex;
  align-items: center;
  justify-content: center;
  gap: 5px;
}

.fridge-card-controls {
  position: absolute;
  bottom: 1px;
  width: 90%;
  height: 100px;
  display: flex;
  justify-content: space-evenly;
  align-items: center;
  border-top: 1px solid rgb(187, 187, 187);
}

.fridge__input {
  width: 100%;
  height: 50px;
  font-size: 1.3rem;
  border-color: none;
  outline: none;
  padding: 5px;
}

.fridge__button--delete {
  width: 25px;
  height: 25px;
  border-radius: 20%;
  display: flex;
  align-items: center;
  justify-content: center;
}

.fridge__button--add{
  width: 63px;
  height: 63px;
  border-radius: 100%;
  position: absolute;
  bottom: 60px;
  right: 30px;
  display: flex;
  align-items: center;
  justify-content: center;
  cursor: pointer;

}

.fridge__button-img{
  width: 25px;
}

.delete-icon {
  width: 20px;
}
/* ... */

